user list overflow and user deletion bug

--- a/public/css/planner.css
+++ b/public/css/planner.css
@@ -27,6 +27,7 @@
     margin-right: 20px;
     position: fixed;
     z-index: 2;
+    overflow-y: auto;
 }
 
 .trash {
